; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_cipso_ipv4.c_cipso_v4_req_delattr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_cipso_ipv4.c_cipso_v4_req_delattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request_sock = type { i32 }
%struct.ip_options = type { i64 }
%struct.inet_request_sock = type { %struct.ip_options* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cipso_v4_req_delattr(%struct.request_sock* %0) #0 {
  %2 = alloca %struct.request_sock*, align 8
  %3 = alloca %struct.ip_options*, align 8
  %4 = alloca %struct.inet_request_sock*, align 8
  store %struct.request_sock* %0, %struct.request_sock** %2, align 8
  %5 = load %struct.request_sock*, %struct.request_sock** %2, align 8
  %6 = call %struct.inet_request_sock* @inet_rsk(%struct.request_sock* %5)
  store %struct.inet_request_sock* %6, %struct.inet_request_sock** %4, align 8
  %7 = load %struct.inet_request_sock*, %struct.inet_request_sock** %4, align 8
  %8 = getelementptr inbounds %struct.inet_request_sock, %struct.inet_request_sock* %7, i32 0, i32 0
  %9 = load %struct.ip_options*, %struct.ip_options** %8, align 8
  store %struct.ip_options* %9, %struct.ip_options** %3, align 8
  %10 = load %struct.ip_options*, %struct.ip_options** %3, align 8
  %11 = icmp eq %struct.ip_options* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %1
  %13 = load %struct.ip_options*, %struct.ip_options** %3, align 8
  %14 = getelementptr inbounds %struct.ip_options, %struct.ip_options* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12, %1
  br label %22

18:                                               ; preds = %12
  %19 = load %struct.inet_request_sock*, %struct.inet_request_sock** %4, align 8
  %20 = getelementptr inbounds %struct.inet_request_sock, %struct.inet_request_sock* %19, i32 0, i32 0
  %21 = call i32 @cipso_v4_delopt(%struct.ip_options** %20)
  br label %22

22:                                               ; preds = %18, %17
  ret void
}

declare dso_local %struct.inet_request_sock* @inet_rsk(%struct.request_sock*) #1

declare dso_local i32 @cipso_v4_delopt(%struct.ip_options**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
